Added paragraph to aboutme.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -25,11 +25,26 @@
             is used to protect the wearer from the dangers of electrical faults.
             </p>
             <h4>Maintenance</h4>
-            <p>Currently I work as an Industrial Maintenance Technician and Waste Water Support Technician at a textile plant in Illinois.
-                
+            <p>
+                Currently I work as an Industrial Maintenance Technician and Waste Water Support Technician at a textile plant in Illinois.
+                I've been in the industry since Feb' 2019 and have learned a great deal about the many challenges that a maintenance department faces.
+                This career has challenged me both metnally and physically as i navigate the intricate problems associated with process automation.
+                Here are a few among the many skills that I have learned:
+                <ul>
+                    <li>Fabrication</li>
+                    <li>Electrical Diagnostics</li>
+                    <li>Mechanical Diagnostics</li>
+                    <li>Project Management</li>
+                    <li></li>
+                </ul>
             </p> 
             <h4>Automotive</h4>
-
+            <p>
+                I began my journey into the automotive industry when I enrolled in the Automotive Technology course in 2012. I began working at one of the largest aftermarket 
+                automotive repair companies in the world. This gave me all the tools I needed to succeed and allowed me a fruitful career in automotive. During my time in the industry 
+                I was fortunate enough to work my way from the bottom of the food-chain to the top. I started as a Lube-Tech and ended my time there as Lead Technician. In a short 5 years
+                I went from only doing oil-changes and tires to diagnosing the most difficult trouble codes and custom wiring entire (classic) vehicles.
+            </p>
         </article>
     </div>
 </body>
