Started personal page content

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 <body>
     <div id="intro">
         <img id="profile-pic" src="images/halloween2021.jpg">
-        
-        <article class="article"><h1>Welcome</h1><br>This is my portfolio. </article>
+        <article class="article">
+            <h1>Personal life</h1>
+            <p>
+
+            </p>
+        </article>
     </div>
     <div>
         
