finished adding content

--- a/contactme.html
+++ b/contactme.html
@@ -16,7 +16,7 @@
             <img src="images/GitHub-Mark-32px.png" alt="GitHub"></a></li>
     </ul>
 </nav>
-<body>
+<body id="contact">
     <div id="contactdiv">
         <h1>Send an email!</h1>
         <p>Send me an email and let me know what you think of my portfolio!</p>
