--- a/index.html
+++ b/index.html
@@ -17,17 +17,36 @@
     </ul>
 </nav>
 <body>
-    <div id="intro">
-        <img id="profile-pic" src="images/halloween2021.jpg">
-        <article class="article">
+    <img class="pic" src="images/halloween2021.jpg">
+    <div> 
+        <article>
             <h1>Personal life</h1>
+            <p>Pictured left is me with my Nephew(right) Daughter(left) and Son(middle)</p>
+            <h4>Isabella</h4>
             <p>
-
+                I became a Father May 26<sup>th</sup> 2017 when my daughter Isabella was born. Isabella was born through a C-section after 27 hours of labor. <br>According to Isabella, these are her favorite things:
+                <ul>
+                    <li>Unicorns</li>
+                    <li>princesses</li>
+                    <li>Tomatoes with lasonic(balsamic)</li>
+                    <li>Avocados</li>
+                </ul>
+                She has a wonderful imagination and an incredible desire to learn, I know this because she asks me "why" about a thousand times per day. Isabella started Kindergarten this year and has enjoyed every day of it.
+                She continues to learn and grow every day, making both of her parents proud.
+            </p>
+            <h4>Bennett</h4>
+            <p>
+                Bennett was born april 19<sup>th</sup> via c-section. Bennett is definitely the more wild of the two kids, he is constantly running around acting crazy and getting himself into trouble.
+                While Bennett definitely shares his sisters curiousity, his differing trait is his shyness. Bennett is more of a cuddlebug in public but an absolute wild child when comfortable.<br>
+                According to Bennett his favorite things are:
+                <ul>
+                    <li>Dinosaurs</li>
+                    <li>Sharks</li>
+                    <li>Daddy(I may have suggested this one)</li>
+                </ul>
+                Bennett loves the outdoors and getting dirty, especially when it comes to digging up worms. He has a kind soul and is well loved by everyone.
             </p>
         </article>
-    </div>
-    <div>
-        
     </div>
 </body>
 <footer>&copy Dominic Davenport</footer>
