--- a/aboutme.html
+++ b/aboutme.html
@@ -17,9 +17,9 @@
     </ul>
 </nav>
 <body>
-    <div id="intro">
-        <img id="profile-pic" src="images/electrician.jpg">
-        <article class="article">
+    <img class="pic" src="images/electrician.jpg">
+    <div>
+        <article>
             <h1>Work experience</h1>
             <p>Pictured left is me wearing an arc-flash suit. This <abbr title="Personal Protective Equipment">PPE</abbr>
             is used to protect the wearer from the dangers of electrical faults.
@@ -42,7 +42,14 @@
                 I began my journey into the automotive industry when I enrolled in the Automotive Technology course in 2012. I began working at one of the largest aftermarket 
                 automotive repair companies in the world. This gave me all the tools I needed to succeed and allowed me a fruitful career in automotive. During my time in the industry 
                 I was fortunate enough to work my way from the bottom of the food-chain to the top. I started as a Lube-Tech and ended my time there as Lead Technician. In a short 5 years
-                I went from only doing oil-changes and tires to diagnosing the most difficult trouble codes and custom wiring entire (classic) vehicles.
+                I went from only doing oil-changes and tires to diagnosing the most difficult trouble codes and custom wiring entire (classic) vehicles. 
+                <h4>Certificates:</h4>
+                <ul>
+                    <li><abbr title="Automotive Service Excellence">ASE</abbr> Master Certified Technician</li>
+                    <li>Timken Bearing Maintenance Certification</li>
+                    <li>Raybestos Certified Brake Specialist</li>
+                    <li>MAC 609.1 Certified Mobile Air Certified</li>
+                </ul>
             </p>
         </article>
     </div>
