--- a/aboutme.html
+++ b/aboutme.html
@@ -48,7 +48,7 @@
                     <li><abbr title="Automotive Service Excellence">ASE</abbr> Master Certified Technician</li>
                     <li>Timken Bearing Maintenance Certification</li>
                     <li>Raybestos Certified Brake Specialist</li>
-                    <li>MAC 609.1 Certified Mobile Air Certified</li>
+                    <li><abbr title="Mobile Air Conditioning">MAC</abbr> 609.1 Certified Mobile Air Certified</li>
                 </ul>
             </p>
         </article>
